[tool.poetry]
name = "betacode"
version = "0.1.0"
description = "To Greek Betacode and back!"
authors = ["Will Fitzgerald <37049+willf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
isort = "^5.12.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
